[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
colored = "3.0.0"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"
hex= "0.4.3"                                    
sha1 = "0.10.6"
git2 = "0.20.2"
chrono = "0.4.37" 
# hashing
# error handling
